# Customer-Lifetime-Value-Prediction

./: .gitignore  README.md  project_needs.txt  pyproject.toml  requirements.txt
notebook/: explore_data.ipynb  get_start_ann.ipynb
notebook/.ipynb_checkpoints/: get_start_ann-checkpoint.ipynb
notebook/.ipynb_checkpoints/.ipynb_checkpoints/: explore_data-checkpoint-checkpoint.ipynb  get_start_ann-checkpoint-checkpoint.ipynb
notebook/mlruns/0/: meta.yaml
notebook/mlruns/523884947611096273/: meta.yaml
notebook/mlruns/523884947611096273/044d8e5966e54ea78456df3cd349ec32/: meta.yaml
notebook/mlruns/523884947611096273/165a0a26231e49089fc54f63f53eefd6/: meta.yaml
notebook/mlruns/523884947611096273/17c879d3baad4a839fec2ee10ba55a63/: meta.yaml
notebook/mlruns/523884947611096273/18ba55b1eb8340bdba56604d95b03726/: meta.yaml
notebook/mlruns/523884947611096273/22e87648be8849419b536172097063c7/: meta.yaml
notebook/mlruns/523884947611096273/30bf46290d6d43698a6854d970589f82/: meta.yaml
notebook/mlruns/523884947611096273/3a146837777e40028761f7b11724cebd/: meta.yaml
notebook/mlruns/523884947611096273/3ca3a74a2a5345aba0ee86067dcf5052/: meta.yaml
notebook/mlruns/523884947611096273/587a2cc72420424a83d0d64039a1b9d5/: meta.yaml
notebook/mlruns/523884947611096273/5a65e6d29ed24b47ab194a81548c9d9d/: meta.yaml
notebook/mlruns/523884947611096273/7a06614c24f04d239c691b97c018e07f/: meta.yaml
notebook/mlruns/523884947611096273/8bbae9395a234707b67c14a954d8bd0e/: meta.yaml
notebook/mlruns/657684567043828443/: meta.yaml
notebook/mlruns/models/ANN-final_model/: meta.yaml
(+252 files in other folders)
