[project]
name = "customer-lifetime-value-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hyperopt>=0.2.7",
    "ipykernel>=6.29.5",
    "keras>=3.10.0",
    "matplotlib>=3.10.3",
    "mlflow>=2.22.0",
    "numpy>=2.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.19.0",
    "wordcloud>=1.9.4",
]
